[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncurlify"
version = "0.1.0"
description = "Generate POSIX curl commands from aiohttp requests"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["aiohttp>=3.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["asyncurlify*"]
